--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -28,6 +28,9 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <Style TargetType="dxe:DateEdit">
+            <Setter Property="IsTextEditable" Value="False"/>
+        </Style>
     </dx:DXWindow.Resources>
 
     <dxmvvm:Interaction.Behaviors>
