delete completed task + extend time for web backup

--- a/ListOfDeal/Views/WunderListView.xaml
+++ b/ListOfDeal/Views/WunderListView.xaml
@@ -23,6 +23,7 @@
             <Button Command="{Binding HandleChangedActionsCommand}" Content="Handle changed LODActions" />
             <Button Command="{Binding GetDiaryEntriesCommand}" Content="Get Diary"/>
             <Button Command="{Binding BackupCommand}" Content="Backup"/>
+            <Button Command="{Binding DeleteCompletedTasksCommand}" Content="DeleteCompletedTasksCommand"/>
             <Button Content="Test button" Command="{Binding TestCommand}"/>
         </StackPanel>
         <ListBox x:Name="listBox1" VerticalAlignment="Stretch"
